force-app/main/default/objects/Stock__c/Stock__c.object-meta.xml
<CustomObject>
    <label>Stock</label>
    <nameField>
        <displayFormat>ST-{000000}</displayFormat>
        <label>STOCK LIST ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>