force-app/main/default/objects/Stock__c/fields/AgingInStockStartEnd__c.field-meta.xml
<CustomField>
    <fullName>AgingInStockStartEnd__c</fullName>
    <formula>StockCountEndDate__c - StockCountStartDate__c</formula>
    <label>AGING IN STOCK FROM START TO END</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>