force-app/main/default/objects/Stock__c/fields/AgingInStockTillToday__c.field-meta.xml
<CustomField>
    <fullName>AgingInStockTillToday__c</fullName>
    <formula>TODAY()  -  StockCountStartDate__c</formula>
    <label>AGING IN STOCK TILL TODAY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>