force-app/main/default/objects/Stock__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <formula>StockLocator__r.Buyer__r.Name</formula>
    <label>BUYER</label>
    <type>Text</type>
</CustomField>