force-app/main/default/objects/Stock__c/fields/CargoID__c.field-meta.xml
<CustomField>
    <fullName>CargoID__c</fullName>
    <formula>WOSLineID__r.Cargo__c</formula>
    <label>CARGO ID</label>
    <type>Text</type>
</CustomField>