force-app/main/default/objects/Stock__c/fields/CargoLifeCycle__c.field-meta.xml
<CustomField>
    <fullName>CargoLifeCycle__c</fullName>
    <formula>text( WOSLineID__r.Cargo__r.CargoLifeCycle__c)</formula>
    <label>Cargo Life Cycle</label>
    <type>Text</type>
</CustomField>