force-app/main/default/objects/Stock__c/fields/CargoName__c.field-meta.xml
<CustomField>
    <fullName>CargoName__c</fullName>
    <formula>WOSLineID__r.Cargo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cargo Name</label>
    <type>Text</type>
</CustomField>