force-app/main/default/objects/Stock__c/fields/CargoQRCodeLabel__c.field-meta.xml
<CustomField>
    <fullName>CargoQRCodeLabel__c</fullName>
    <formula>WOSLineID__r.Cargo__r.QrCodeImage__c</formula>
    <label>CARGO QR CODE LABEL</label>
    <type>Text</type>
</CustomField>