force-app/main/default/objects/Stock__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <formula>TEXT(StockLocator__r.ChargeType__c)</formula>
    <label>CHARGE TYPE</label>
    <type>Text</type>
</CustomField>