force-app/main/default/objects/Stock__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CUSTOMER</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>STOCK (CUSTOMER)</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>