force-app/main/default/objects/Stock__c/fields/DataPush__c.field-meta.xml
<CustomField>
    <fullName>DataPush__c</fullName>
    <label>DATA PUSH</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DataPush</valueSetName>
    </valueSet>
</CustomField>