force-app/main/default/objects/Stock__c/fields/ExpireDateCargo__c.field-meta.xml
<CustomField>
    <fullName>ExpireDateCargo__c</fullName>
    <formula>WOSLineID__r.Cargo__r.ExpiredDate__c</formula>
    <label>Expire Date from Cargo</label>
    <type>Date</type>
</CustomField>