force-app/main/default/objects/Stock__c/fields/ExpireDateSKUNumber__c.field-meta.xml
<CustomField>
    <fullName>ExpireDateSKUNumber__c</fullName>
    <formula>WOSLineID__r.Cargo__r.ExpireDateSKUNumber__c</formula>
    <label>Expire Date SKU Number</label>
    <type>Text</type>
</CustomField>