force-app/main/default/objects/Stock__c/fields/ExpiredDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiredDate__c</fullName>
    <label>EXPIRED DATE(Old)</label>
    <type>Date</type>
</CustomField>