force-app/main/default/objects/Stock__c/fields/FastSlowClassification__c.field-meta.xml
<CustomField>
    <fullName>FastSlowClassification__c</fullName>
    <formula>Text(StockLocator__r.FastSlowClassification__c)</formula>
    <label>FAST/SLOW CLASSIFICATION</label>
    <type>Text</type>
</CustomField>