force-app/main/default/objects/Stock__c/fields/GoodsOwner__c.field-meta.xml
<CustomField>
    <fullName>GoodsOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS OWNER</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>STOCK_LIST</relationshipName>
    <type>Lookup</type>
</CustomField>