force-app/main/default/objects/Stock__c/fields/ItemNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>ItemNumberFormula__c</fullName>
    <formula>WOSLineID__r.Cargo__r.ItemNumber__c</formula>
    <label>Item Number</label>
    <type>Text</type>
</CustomField>