force-app/main/default/objects/Stock__c/fields/LocatorActualAvailableCapacityKG__c.field-meta.xml
<CustomField>
    <fullName>LocatorActualAvailableCapacityKG__c</fullName>
    <formula>StockLocator__r.ActualAvailableCapacityKG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVAILABLE CAPACITY(KG) INCLUDE PLANNED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>