force-app/main/default/objects/Stock__c/fields/LocatorCode_del__c.field-meta.xml
<CustomField>
    <fullName>LocatorCode_del__c</fullName>
    <formula>StockLocator__r.LocatorCode__c</formula>
    <label>LOCATOR CODE</label>
    <type>Text</type>
</CustomField>