force-app/main/default/objects/Stock__c/fields/LOTNumber__c.field-meta.xml
<CustomField>
    <fullName>LOTNumber__c</fullName>
    <label>LOT NUMBER(Old)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>