force-app/main/default/objects/Stock__c/fields/LotNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>LotNumberFormula__c</fullName>
    <formula>WOSLineID__r.Cargo__r.LotNumber__c</formula>
    <label>Lot Number</label>
    <type>Text</type>
</CustomField>