force-app/main/default/objects/Stock__c/fields/ManufacturedDate__c.field-meta.xml
<CustomField>
    <fullName>ManufacturedDate__c</fullName>
    <label>MANUFACTURED DATE(Old)</label>
    <type>Date</type>
</CustomField>