force-app/main/default/objects/Stock__c/fields/Measurement__c.field-meta.xml
<CustomField>
    <fullName>Measurement__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MEASUREMENT (CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>