force-app/main/default/objects/Stock__c/fields/NETWeight__c.field-meta.xml
<CustomField>
    <fullName>NETWeight__c</fullName>
    <defaultValue>0</defaultValue>
    <label>NET WEIGHT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>