force-app/main/default/objects/Stock__c/fields/PartNumberFormula__c.field-meta.xml
<CustomField>
    <fullName>PartNumberFormula__c</fullName>
    <formula>WOSLineID__r.Cargo__r.PartNumber__c</formula>
    <label>Part Number</label>
    <type>Text</type>
</CustomField>