force-app/main/default/objects/Stock__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRODUCT ID</label>
    <referenceTo>PRODUCT__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>STOCK_LIST</relationshipName>
    <type>Lookup</type>
</CustomField>