force-app/main/default/objects/Stock__c/fields/PurchasingOrderID__c.field-meta.xml
<CustomField>
    <fullName>PurchasingOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS PURCHASING ORDER ID</label>
    <referenceTo>GoodsPurchasingOrder__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>