force-app/main/default/objects/Stock__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>QUANTITY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>