force-app/main/default/objects/Stock__c/fields/SalesOrderID__c.field-meta.xml
<CustomField>
    <fullName>SalesOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GOODS SALES ORDER ID</label>
    <referenceTo>SALES_ORDER__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>