force-app/main/default/objects/Stock__c/fields/SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>SerialNumber__c</fullName>
    <formula>WOSLineID__r.Cargo__r.SerialNumber__c</formula>
    <label>Serial Number</label>
    <type>Text</type>
</CustomField>