force-app/main/default/objects/Stock__c/fields/SKUNumber__c.field-meta.xml
<CustomField>
    <fullName>SKUNumber__c</fullName>
    <label>SKU NUMBER(Old)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>