force-app/main/default/objects/Stock__c/fields/STOCK__c.field-meta.xml
<CustomField>
    <fullName>STOCK__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Stock</relationshipLabel>
    <relationshipName>Stock</relationshipName>
    <type>Lookup</type>
</CustomField>