force-app/main/default/objects/Stock__c/fields/StockCountEndDate__c.field-meta.xml
<CustomField>
    <fullName>StockCountEndDate__c</fullName>
    <label>STOCK COUNT END DATE</label>
    <type>Date</type>
</CustomField>