force-app/main/default/objects/Stock__c/fields/StockCountStartDate__c.field-meta.xml
<CustomField>
    <fullName>StockCountStartDate__c</fullName>
    <label>STOCK COUNT START DATE</label>
    <type>Date</type>
</CustomField>