force-app/main/default/objects/Stock__c/fields/StockDate__c.field-meta.xml
<CustomField>
    <fullName>StockDate__c</fullName>
    <label>STOCK DATE</label>
    <type>Date</type>
</CustomField>