force-app/main/default/objects/Stock__c/fields/StockLocator__c.field-meta.xml
<CustomField>
    <fullName>StockLocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STOCK LOCATOR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>LOCATOR__c.LocationAreaType__c</field>
            <operation>equals</operation>
            <value>Storage Area, Storage Area</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>LOCATOR__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>STOCK_LIST</relationshipName>
    <type>Lookup</type>
</CustomField>