force-app/main/default/objects/Stock__c/fields/StockOutCounting__c.field-meta.xml
<CustomField>
    <fullName>StockOutCounting__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Automatically count when Stock-out are counted in Stock Inventory</inlineHelpText>
    <label>STOCK-OUT COUNTING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>