force-app/main/default/objects/Stock__c/fields/StockOutQuantityFormula__c.field-meta.xml
<CustomField>
    <fullName>StockOutQuantityFormula__c</fullName>
    <formula>IF( RecordType.DeveloperName=&quot;StockOut&quot; , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock-Out Quantity-Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>