force-app/main/default/objects/Stock__c/fields/StockStatus__c.field-meta.xml
<CustomField>
    <fullName>StockStatus__c</fullName>
    <label>STOCK STATUS</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StockStatus</valueSetName>
    </valueSet>
</CustomField>