force-app/main/default/objects/Stock__c/fields/StockWarehouseID__c.field-meta.xml
<CustomField>
    <fullName>StockWarehouseID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>STOCK WAREHOUSE ID</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>STOCK (WAREHOUSE ID)</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>