force-app/main/default/objects/Stock__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <formula>StockLocator__r.Supplier__r.Name</formula>
    <label>SUPPLIER</label>
    <type>Text</type>
</CustomField>