force-app/main/default/objects/Stock__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <formula>StockLocator__r.Tenant__r.Name</formula>
    <label>TENANT</label>
    <type>Text</type>
</CustomField>