force-app/main/default/objects/Stock__c/fields/WorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WORK ORDER ID</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>STOCK</relationshipName>
    <type>Lookup</type>
</CustomField>