force-app/main/default/objects/Stock__c/fields/WOSLineID__c.field-meta.xml
<CustomField>
    <fullName>WOSLineID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>W/O/S LINE ID</label>
    <referenceTo>WOSLineItem__c</referenceTo>
    <relationshipLabel>STOCK</relationshipLabel>
    <relationshipName>StockWOSLineID</relationshipName>
    <type>Lookup</type>
</CustomField>