force-app/main/default/objects/Stock__c/recordTypes/StockIn.recordType-meta.xml
<RecordType>
    <fullName>StockIn</fullName>
    <active>true</active>
    <description>Record Type when Goods increase</description>
    <label>Stock-In</label>
</RecordType>