force-app/main/default/objects/Stock__c/recordTypes/StockOut.recordType-meta.xml
<RecordType>
    <fullName>StockOut</fullName>
    <active>true</active>
    <description>Record Type when Number of Goods decrease</description>
    <label>Stock-Out</label>
</RecordType>