force-app/main/default/objects/Stock__c/validationRules/GrossWeightWithMaxCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>GrossWeightWithMaxCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockIn&apos;,
 GrossWeight__c &gt;  MaxCapacityKG__c)</errorConditionFormula>
    <errorDisplayField>GrossWeight__c</errorDisplayField>
    <errorMessage>The Gross Weight of stock in can not greater than Max Capacity KG.</errorMessage>
</ValidationRule>