force-app/main/default/objects/Stock__c/validationRules/GrossWeightWithOccupiedCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>GrossWeightWithOccupiedCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockOut&apos;,
 GrossWeight__c &gt;   StockLocator__r.CurrentOccupiedCapacityKG__c )</errorConditionFormula>
    <errorDisplayField>GrossWeight__c</errorDisplayField>
    <errorMessage>The Gross Weight of stock out can not greater than Current Occupied Capacity KG of Locator.</errorMessage>
</ValidationRule>