force-app/main/default/objects/Stock__c/validationRules/MeasurementWithMaxCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>MeasurementWithMaxCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockIn&apos;,
Measurement__c &gt;  MaxCapacityCBM__c)</errorConditionFormula>
    <errorDisplayField>Measurement__c</errorDisplayField>
    <errorMessage>The Measurement stock in can not greater than Max Capacity CBM.</errorMessage>
</ValidationRule>