force-app/main/default/objects/Stock__c/validationRules/MesurementWithOccupiedCapacityCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>MesurementWithOccupiedCapacityCheck</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName == &apos;StockOut&apos;,
  Measurement__c &gt;   StockLocator__r.CurrentOccupiedCapacityCBM__c )</errorConditionFormula>
    <errorDisplayField>Measurement__c</errorDisplayField>
    <errorMessage>The Measurement of stock out can not greater than Current Occupied Capacity CBM of Locator.</errorMessage>
</ValidationRule>