force-app/main/default/objects/Stock__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>StockDate__c</columns>
    <columns>NAME</columns>
    <columns>WOSLineID__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>StockStatus__c</columns>
    <columns>WorkOrderServiceID__c</columns>
    <columns>ProductID__c</columns>
    <columns>ProductName__c</columns>
    <columns>TotalQuantityInStock__c</columns>
    <columns>WorkOrderID__c</columns>
    <columns>StockLocator__c</columns>
    <columns>SKUNumber__c</columns>
    <columns>ExpiredDate__c</columns>
    <columns>Measurement__c</columns>
    <columns>StockCountStartDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>0.All</label>
</ListView>