force-app/main/default/objects/Stock__c/listViews/LocatorSearch.listView-meta.xml
<ListView>
    <fullName>LocatorSearch</fullName>
    <booleanFilter>1 or 2 or 3 or 4 or 5 or 6 or 7 or 8 or 9 or 10</booleanFilter>
    <columns>NAME</columns>
    <columns>StockStatus__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>StockLocator__c</columns>
    <columns>LocatorCode_del__c</columns>
    <columns>StockWarehouseID__c</columns>
    <columns>ProductID__c</columns>
    <columns>ProductName__c</columns>
    <columns>GoodsOwner__c</columns>
    <columns>Tenant__c</columns>
    <columns>Buyer__c</columns>
    <columns>SKU__c</columns>
    <columns>ChargeUnit__c</columns>
    <columns>LocatorActualAvailableCapacityCBM__c</columns>
    <columns>LocatorActualAvailableCapacityKG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StockLocator__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>StockWarehouseID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ProductID__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>GoodsOwner__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Tenant__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Buyer__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Supplier__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>SKU__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>ChargeUnit__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>FastSlowClassification__c</field>
        <operation>equals</operation>
    </filters>
    <label>☘LOCATOR SEARCH☘</label>
    <language>en_US</language>
</ListView>