force-app/main/default/objects/Stock__c/listViews/Stock_Out.listView-meta.xml
<ListView>
    <fullName>Stock_Out</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>Customer__c</columns>
    <columns>ProductID__c</columns>
    <columns>Quantity__c</columns>
    <columns>UnitType__c</columns>
    <columns>StockLocator__c</columns>
    <columns>StockCountStartDate__c</columns>
    <columns>StockCountEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Stock__c.StockOut</value>
    </filters>
    <label>2.Stock-Out</label>
</ListView>