force-app/main/default/objects/Stock__c/listViews/StockInbound.listView-meta.xml
<ListView>
    <fullName>StockInbound</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>Customer__c</columns>
    <columns>ProductID__c</columns>
    <columns>UnitType__c</columns>
    <columns>StockLocator__c</columns>
    <columns>LocatorCode_del__c</columns>
    <columns>StockCountStartDate__c</columns>
    <columns>StockCountEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Stock__c.StockIn</value>
    </filters>
    <label>1.Stock-In</label>
</ListView>