force-app/main/default/objects/Stock__c/listViews/X3_Uncompleted.listView-meta.xml
<ListView>
    <fullName>X3_Uncompleted</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>Customer__c</columns>
    <columns>ProductID__c</columns>
    <columns>Quantity__c</columns>
    <columns>UnitType__c</columns>
    <columns>StockLocator__c</columns>
    <columns>StockCountStartDate__c</columns>
    <columns>StockCountEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StockStatus__c</field>
        <operation>equals</operation>
        <value>Created,Planning</value>
    </filters>
    <label>3.Uncompleted</label>
    <language>en_US</language>
</ListView>