force-app/main/default/objects/Stock__c/listViews/X4_Completed.listView-meta.xml
<ListView>
    <fullName>X4_Completed</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>Customer__c</columns>
    <columns>ProductID__c</columns>
    <columns>Quantity__c</columns>
    <columns>UnitType__c</columns>
    <columns>StockCountStartDate__c</columns>
    <columns>StockLocator__c</columns>
    <columns>StockCountEndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StockStatus__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>4.Completed</label>
    <language>en_US</language>
</ListView>